# angular-agent-framework

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL  README.md  SECURITY.md  commitlint.config.cjs  deployment-urls.json  eslint.config.mjs  gtm.md  nx.json  package-lock.json  package.json  renovate.json  tsconfig.base.json  tsconfig.json
.claude/: launch.json
.github/workflows/: aimock-drift.yml  auto-approve.yml  ci.yml  claude-review.yml  codeql.yml  deploy-ag-ui.yml  deploy-langgraph.yml  e2e.yml  posthog-quality.yml  publish-client-tools-python.yml  publish-middleware-npm.yml  publish-middleware-python.yml  publish.yml  release-provenance.yml  scorecard.yml
apps/cockpit/: cockpit-e2e-wiring.spec.ts  instrumentation-client.ts  playwright.config.ts  project.json  tsconfig.json  vite.config.mts
apps/minting-service/: LICENSE  README.md  package.json  project.json  tsconfig.app.json  vercel.json
apps/website/: .env.example  instrumentation-client.ts  package.json  playwright.config.ts  project.json  tsconfig.json  vite.config.mts
cockpit/: ports.mjs
cockpit/ag-ui/client-tools/python/: project.json  pyproject.toml  requirements.txt
cockpit/ag-ui/client-tools/python/docs/: guide.md
cockpit/ag-ui/client-tools/python/prompts/: client-tools.md
cockpit/ag-ui/client-tools/python/src/: graph.py  server.py
cockpit/chat/: footprint.spec.ts
cockpit/langgraph/client-tools/python/: langgraph.json  package.json  project.json  pyproject.toml  requirements.txt
cockpit/langgraph/client-tools/python/docs/: guide.md
cockpit/langgraph/client-tools/python/prompts/: client-tools.md
cockpit/langgraph/client-tools/python/src/: graph.py  index.ts
cockpit/render/: README.md  tsconfig.spec.json  vite.config.mts
deployments/ag-ui-dev/: Dockerfile  README.md  entrypoint.sh  railway.json  requirements.txt  server.py
deployments/shared-dev/: langgraph.json
docs/: RELEASE.md  limitations.md
docs/gtm/: icp.md  (+3 more)
examples/ag-ui/python/: Dockerfile  README.md  entrypoint.sh  project.json  pyproject.toml  railway.json  requirements.txt
examples/ag-ui/python/src/: graph.py  server.py
examples/ag-ui/python/src/schemas/: json_render.py
examples/ag-ui/python/src/streaming/: __init__.py  activity_transform.py  subagent_stream_handler.py
examples/ag-ui/python/tests/: test_activity_transform.py  test_subagent_emission.py  test_subagent_stream_handler.py
marketing/: README.md
pricing/: tiers.config.ts  tiers.generated.ts
scripts/: ag-ui-demo-middleware.ts  ag-ui-proxy.ts  assemble-ag-ui-demo.ts  assemble-examples.ts  capture-blog-screenshots.mjs  check-dx-coverage.mjs  ci-scope.mjs  ci-scope.spec.mjs  ci-workflow.spec.mjs  cockpit-matrix.mjs  cockpit-matrix.spec.mjs  cockpit-ports.spec.mjs  demo-middleware.ts  examples-middleware.ts  generate-ag-ui-deployment-config.spec.ts  generate-ag-ui-deployment-config.ts  generate-aimock-scaffold.ts  generate-shared-deployment-config.spec.ts  generate-shared-deployment-config.ts  langgraph-proxy.spec.ts  langgraph-proxy.ts  upstash-rate-limit.spec.ts  upstash-rate-limit.ts  verify-release-local.sh  verify-release-versions.mjs  verify-release-versions.spec.mjs
tools/: verify-chat-debug-bundle.mjs
(+2356 files in other folders)
