[project]
name = "examples-ag-ui-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3",
    "langchain-openai>=0.3",
    "ag-ui-langgraph>=0.0.37",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "threadplane-middleware>=0.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv.sources]
threadplane-middleware = { path = "../../../packages/threadplane-middleware", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
markers = [
    "smoke: smoke tests that run on every CI build",
]
asyncio_mode = "auto"
