[project]
name = "cockpit-ag-ui-client-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3",
    "langchain-openai>=0.3",
    "langsmith>=0.2",
    "ag-ui-langgraph>=0.0.25",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "threadplane-client-tools",
]

[tool.uv.sources]
threadplane-client-tools = { path = "../../../../packages/threadplane-client-tools" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
