[project]
name = "cockpit-langgraph-client-tools"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3",
    "langchain-openai>=0.3",
    "langsmith>=0.2",
    "threadplane-client-tools",
]

[tool.uv.sources]
threadplane-client-tools = { path = "../../../../packages/threadplane-client-tools" }

[tool.uv]
dev-dependencies = [
    "langgraph-cli[inmem]>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
